Table users {
	id integer [pk, increment]
	name varchar [not null]
	username varchar [not null, unique]
	web_username varchar [not null, unique]
	git_username varchar [not null, unique]
	git_email varchar [not null, unique]
	email varchar [not null, unique]
	avatar_url varchar
	role varchar [not null, default: 'developer']
	locale varchar [not null, default: 'en']
	timezone varchar [not null, default: 'UTC']
	preferred_language varchar [not null, default: 'en']
	preferred_theme varchar [not null, default: 'light']
	preferred_code_editor varchar [not null, default: 'vscode']
	preferred_color_scheme varchar [not null, default: 'default']
	deleted_at timestamp
	created_at timestamp [not null, default: `now()`]
	updated_at timestamp [not null, default: `now()`]
}

Table tasks {
	id uuid [pk, default: `uuid_generate_v4()`]
	user_id integer [not null]
	title varchar [not null]
	description text
	is_completed boolean [not null, default: false]
	due_date date
	created_at timestamp [not null, default: `now()`]
	updated_at timestamp [not null, default: `now()`]
}

Table projects {
	id uuid [pk, default: `uuid_generate_v4()`]
	user_id integer [not null]
	name varchar [not null]
	description text
	created_at timestamp [not null, default: `now()`]
	updated_at timestamp [not null, default: `now()`]
}

Table project_tasks {
	project_id uuid [not null]
	task_id uuid [not null]

	indexes {
		(project_id, task_id) [pk]
	}
}

Table tags {
	id integer [pk, increment]
	name varchar [not null, unique]
	created_at timestamp [not null, default: `now()`]
	updated_at timestamp [not null, default: `now()`]
}

Table task_tags {
	task_id integer [not null]
	tag_id integer [not null]

	indexes {
		(task_id, tag_id) [pk]
	}
}

Ref: users.id < tasks.user_id
Ref: tasks.id < task_tags.task_id
Ref: tags.id < task_tags.tag_id